--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-      <title>Listing</title>
+      <title>Aurelia Start</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" viewport>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -14,9 +14,9 @@
 </head>
 <body aurelia-app="app-config">
 
-XXDDF
-    dsadas
-    dsadsa
+
+<h2>Loading ...</h2>
+
 
 
 <script src="jspm_packages/system.js"></script>
